--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.10.0
   get_it: ^7.2.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
